--- a/css/style.css
+++ b/css/style.css
@@ -61,13 +61,13 @@ ul > li.expanded.dropdown.active.open > ul {
   box-shadow: none; }
 
 li.expanded.dropdown.active.open > ul > li > a {
-  background-color: #981e32;
-  color: #ffffff;
+  background-color: #fafafa;
+  color: #981e32;
   padding: .75em; }
 
 li.expanded.dropdown.active.open > ul > li > a:hover {
-  background-color: #ffffff;
-  color: #981e32;
+  background-color: #981e32;
+  color: #ffffff;
   padding: .75em; }
 
 /* SIDEBAR SECOND */
