Added _template.scss for non Bootstrap overrides

--- a/scss/_overrides.scss
+++ b/scss/_overrides.scss
@@ -13,6 +13,7 @@
 @import "component/progress-bar";
 @import "component/table-drag";
 @import "component/tabs";
+@import "component/template";
 @import "component/toolbar";
 
 // jQuery UI style overrides.
