--- a/css/style.css
+++ b/css/style.css
@@ -6280,6 +6280,14 @@ body {
   .tabs-right > .nav-tabs > .active > a:focus {
     border-color: #ddd #ddd #ddd transparent; }
 
+/* Paragraph container styles */
+div.field.field--name-field-left-column.field--type-text-long.field--label-hidden.field--item {
+  float: left; }
+
+div.field.field--name-field-right-column.field--type-text-long.field--label-hidden.field--item {
+  float: right;
+  clear: left; }
+
 /**
  * Toolbar module styling.
  */
