Revert full width container template overrides
Changing this in favor of Bootstrap Paragraphs module method by Pantheon

--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -1,12 +1,6 @@
 // CUSTOM WSU VANCOUVER TEMPLATE STYLES
 
-/* Paragraph container styles */
+/* Variables */
 
-div.field.field--name-field-left-column.field--type-text-long.field--label-hidden.field--item {
-  float: left;
-}
-
-div.field.field--name-field-right-column.field--type-text-long.field--label-hidden.field--item {
-  float: right;
-  clear: left;
-}
+$lightestgray: #f8f8f8;
+$lightgray: #e7e9ea;
