--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -19,14 +19,6 @@
  * Site identity:
  * - front_page: The URL of the front page. Use this instead of base_path when
  *   linking to the front page. This includes the language domain or prefix.
- * - logo: The url of the logo image, as defined in theme settings.
- * - site_name: The name of the site. This is empty when displaying the site
- *   name has been disabled in the theme settings.
- * - site_slogan: The slogan of the site. This is empty when displaying the site
- *   slogan has been disabled in theme settings.
- *
- * Navigation:
- * - breadcrumb: The breadcrumb trail for the current page.
  *
  * Page content (in order of occurrence in the default page.html.twig):
  * - title_prefix: Additional output populated by modules, intended to be
@@ -37,8 +29,6 @@
  * - messages: Status and error messages. Should be displayed prominently.
  * - tabs: Tabs linking to any sub-pages beneath the current page (e.g., the
  *   view and edit tabs when displaying a node).
- * - action_links: Actions local to the page, such as "Add menu" on the menu
- *   administration interface.
  * - node: Fully loaded node, if there is an automatically-loaded node
  *   associated with the page and the node ID is the second argument in the
  *   page's path (e.g. node/12345 and node/12345/revisions, but not
@@ -46,8 +36,8 @@
  *
  * Regions:
  * - page.header: Items for the header region.
- * - page.primary_menu: Items for the primary menu region.
- * - page.secondary_menu: Items for the secondary menu region.
+ * - page.navigation: Items for the navigation region.
+ * - page.navigation_collapsible: Items for the navigation (collapsible) region.
  * - page.highlighted: Items for the highlighted content region.
  * - page.help: Dynamic help text, mostly for admin pages.
  * - page.content: The main content of the current page.
@@ -55,15 +45,15 @@
  * - page.sidebar_second: Items for the second sidebar.
  * - page.footer: Items for the footer region.
  *
+ * @ingroup templates
+ *
  * @see template_preprocess_page()
  * @see html.html.twig
- *
- * @ingroup templates
  */
 #}
 {% set container = theme.settings.fluid_container ? 'container-fluid' : 'container' %}
 {# Navbar #}
-{% if page.navigation %}
+{% if page.navigation or page.navigation_collapsible %}
   {% block navbar %}
     {%
       set navbar_classes = [
@@ -73,21 +63,29 @@
       ]
     %}
     <header{{ navbar_attributes.addClass(navbar_classes) }} id="navbar" role="banner">
+      {% if not navbar_attributes.hasClass(container) %}
+        <div class="{{ container }}">
+      {% endif %}
       <div class="navbar-header">
         {{ page.navigation }}
         {# .btn-navbar is used as the toggle for collapsed navbar content #}
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">{{ 'Toggle navigation'|t }}</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+        {% if page.navigation_collapsible %}
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+            <span class="sr-only">{{ 'Toggle navigation'|t }}</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        {% endif %}
       </div>
 
       {# Navigation (collapsible) #}
       {% if page.navigation_collapsible %}
-        <div class="navbar-collapse collapse">
+        <div id="navbar-collapse" class="navbar-collapse collapse">
           {{ page.navigation_collapsible }}
+        </div>
+      {% endif %}
+      {% if not navbar_attributes.hasClass(container) %}
         </div>
       {% endif %}
     </header>
@@ -95,9 +93,10 @@
 {% endif %}
 
 {# Main #}
-<div role="main" class="main-container js-quickedit-main-content">
-  <div class="container">
+{% block main %}
+  <div role="main" class="main-container {{ container }} js-quickedit-main-content">
     <div class="row">
+
       {# Header #}
       {% if page.header %}
         {% block header %}
@@ -107,45 +106,58 @@
         {% endblock %}
       {% endif %}
 
-      {# Highlighted #}
-      {% if page.highlighted %}
-        {% block highlighted %}
-          <div class="highlighted">{{ page.highlighted }}</div>
+      {# Sidebar First #}
+      {% if page.sidebar_first %}
+        {% block sidebar_first %}
+          <aside class="col-sm-3" role="complementary">
+            {{ page.sidebar_first }}
+          </aside>
         {% endblock %}
       {% endif %}
 
-      {# Breadcrumbs #}
-      {% if breadcrumb %}
-        {% block breadcrumb %}
-          {{ breadcrumb }}
-        {% endblock %}
-      {% endif %}
+      {# Content #}
+      {%
+        set content_classes = [
+          page.sidebar_first and page.sidebar_second ? 'col-sm-6',
+          page.sidebar_first and page.sidebar_second is empty ? 'col-sm-9',
+          page.sidebar_second and page.sidebar_first is empty ? 'col-sm-9',
+          page.sidebar_first is empty and page.sidebar_second is empty ? 'col-sm-12'
+        ]
+      %}
+      <section{{ content_attributes.addClass(content_classes) }}>
 
-      {# Action Links #}
-      {% if action_links %}
-        {% block action_links %}
-          <ul class="action-links">{{ action_links }}</ul>
-        {% endblock %}
-      {% endif %}
+        {# Highlighted #}
+        {% if page.highlighted %}
+          {% block highlighted %}
+            <div class="highlighted">{{ page.highlighted }}</div>
+          {% endblock %}
+        {% endif %}
 
-      {# Help #}
-      {% if page.help %}
-        {% block help %}
-          {{ page.help }}
+        {# Help #}
+        {% if page.help %}
+          {% block help %}
+            {{ page.help }}
+          {% endblock %}
+        {% endif %}
+
+        {# Content #}
+        {% block content %}
+          <a id="main-content"></a>
+          {{ page.content }}
+        {% endblock %}
+      </section>
+
+      {# Sidebar Second #}
+      {% if page.sidebar_second %}
+        {% block sidebar_second %}
+          <aside class="col-sm-3" role="complementary">
+            {{ page.sidebar_second }}
+          </aside>
         {% endblock %}
       {% endif %}
     </div>
   </div>
-  {# Content #}
-  <section>
-    {# Content #}
-    {% block content %}
-      <a id="main-content"></a>
-      {{ page.content }}
-    {% endblock %}
-  </section>
-
-</div>
+{% endblock %}
 
 {% if page.footer %}
   {% block footer %}
