Added and styled sitemap footer in html.html.twig

--- a/css/style.css
+++ b/css/style.css
@@ -6290,6 +6290,19 @@ body {
   margin-left: 15px;
   margin-right: 15px; }
 
+.sitemap .col-md-3 {
+  background-color: #262b2d;
+  margin-bottom: 0;
+  padding: 30px 15px 15px 0;
+  font-size: 14px; }
+  .sitemap .col-md-3 li, .sitemap .col-md-3 li a {
+    color: #ffffff;
+    list-style-type: none;
+    padding-bottom: 8px; }
+  .sitemap .col-md-3 li.sitemap-section {
+    text-transform: uppercase;
+    letter-spacing: 1px; }
+
 /**
  * Toolbar module styling.
  */
