--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -69,6 +69,107 @@
     {{ page_top }}
     {{ page }}
     {{ page_bottom }}
+
+<!-- FOOTER SITEMAP -->
+
+<div class="sitemap">
+  <div class="col-md-3">
+  		<ul>
+ 			<li class="sitemap-section"><strong>WSU Vancouver</strong></li>
+			<li><a href="https://www.vancouver.wsu.edu/about-wsu-vancouver">About WSU Vancouver</a></li>
+			<li><a href="http://registrar.wsu.edu/academic-calendar">Academic Calendar</a></li>
+			<li><a href="http://directory.vancouver.wsu.edu">Campus Directory</a></li>
+			<li><a href="https://www.vancouver.wsu.edu/campus-map-directions-and-parking-information">Campus Map</a></li>
+			<li><a href="https://hd.vancouver.wsu.edu/child-development">Child Development Program</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/diversity">Diversity</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/human-resources/employment">Employment</a></li>
+			<li><a href="https://events.vancouver.wsu.edu">Events Calendar</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/facilities-operations/events-office">Events Office</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/parking/parking-services">Parking Services</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/research">Research</a></li>
+    	</ul>
+  </div>
+  <div class="col-md-3">
+  		<ul>
+ 			<li class="sitemap-section"><strong>Future Students</strong></li>
+			<li><a href="https://studentaffairs.vancouver.wsu.edu/admissions">Admissions</a></li>
+			<li><a href="https://studentaffairs.vancouver.wsu.edu/financial-aid">Student Financial Services</a></li>
+			<li><a href="https://studentaffairs.vancouver.wsu.edu/majors-and-programs">Majors and Programs</a></li>
+			<li>&nbsp;</li>
+			<li class="sitemap-section"><strong>Current Students</strong></li>
+			<li><a href="http://learn.wsu.edu/">Blackboard</a></li>
+			<li><a href="https://library.vancouver.wsu.edu">Library</a></li>
+      <li><a href="http://office365.wsu.edu/">Student Email</a></li>
+			<li><a href="https://studentaffairs.vancouver.wsu.edu/osi">Student Involvement</a></li>
+			<li><a href="https://studentaffairs.vancouver.wsu.edu/student-involvement/registered-student-organizations-rsos">Student Organizations</a></li>
+			<li><a href="https://studentaffairs.vancouver.wsu.edu/src">Student Resource Center</a></li>
+    	</ul>
+  </div>
+  <div class="col-md-3">
+  		<ul>
+ 			<li class="sitemap-section"><strong>Administration</strong></li>
+			<li><a href="https://admin.vancouver.wsu.edu/academic-affairs">Academic Affairs</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/capital-planning-and-development">Capital Planning and Development</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/office-of-the-chancellor">Office of the Chancellor</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations">Development and Alumni Relations</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/finance-and-operations">Finance and Operations</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/human-resources">Human Resources</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/information-technology">Information Technology</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/marketing-and-communications">Marketing and Communications</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/public-safety/public-safety">Public Safety</a></li>
+			<li><a href="https://www.vancouver.wsu.edu/safety-plan">Safety Plan and Security Report</a></li>
+			<li><a href="https://studentaffairs.vancouver.wsu.edu/">Student Affairs and Enrollment</a></li>
+   		</ul>
+  </div>
+  <div class="col-md-3">
+  		<ul>
+ 			<li class="sitemap-section"><strong>Academic Units</strong></li>
+			<li><a href="https://cas.vancouver.wsu.edu">Arts and Sciences</a></li>
+      <li><a href="https://business.vancouver.wsu.edu">Business</a></li>
+			<li><a href="https://education.vancouver.wsu.edu">Education</a></li>
+			<li><a href="https://ecs.vancouver.wsu.edu">Engineering and Computer Science</a></li>
+			<li><a href="https://hd.vancouver.wsu.edu">Human Development</a></li>
+			<li><a href="https://nursing.vancouver.wsu.edu">Nursing</a></li>
+			<li>&nbsp;</li>
+			<li class="sitemap-section"><strong>Alumni</strong></li>
+			<li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations/alumni-relations/alumni-association">Alumni Association</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations/alumni-relations/get-involved">Get Involved</a></li>
+			<li><a href="https://admin.vancouver.wsu.edu/giving/make-gift-wsu-vancouver">Make a Gift</a></li>
+    	</ul>
+  </div>
+</div>
+
+<!-- FOOTER COPYRIGHT -->
+
+<!--
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+  	  <ul>
+        <li>&copy; WSU Vancouver</li>
+        <li><a href="https://www.vancouver.wsu.edu/about-wsu-vancouver">About</a></li>
+        <li><a href="https://access.wsu.edu/">Accessibility</a></li>
+        <li><a href="https://policies.wsu.edu/">Policies</a></li>
+        <li><a href="http://public.wsu.edu/~forms/ProposedWAC.html">Rule making</a></li>
+        <li><a href="https://ucomm.wsu.edu/wsu-copyright-policy/">Copyright</a></li>
+      </ul>
+    </div>
+    <div class="col-sm-6">
+      <div>
+  		<ul>
+        <li>Contact</li>
+        <li><a href="https://www.vancouver.wsu.edu/campus-map-directions-and-parking-information" alt="Map, parking and directions">14204 NE Salmon Creek Ave, Vancouver, WA, 98686</a></li>
+        <li><a href="tel:+13605469788">360-546-9788</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+-->
+
+<!-- SOCIAL MEDIA ICONS -->
+
+<!-- Create using glyphicons? -->
+
     <js-bottom-placeholder token="{{ placeholder_token|raw }}">
   </body>
 </html>
