Fix margin between quick links bar and page header

--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -41,6 +41,10 @@ $white: #ffffff;
   padding-right: 0;
 }
 
+.region.region-content {
+  margin-top: 30px;
+}
+
 .page-header {
   margin-left: 15px;
   margin-right: 15px;
