--- a/css/style.css
+++ b/css/style.css
@@ -6306,6 +6306,9 @@ body {
   padding-left: 0;
   padding-right: 0; }
 
+.region.region-content {
+  margin-top: 30px; }
+
 .page-header {
   margin-left: 15px;
   margin-right: 15px; }
