--- a/css/style.css
+++ b/css/style.css
@@ -6289,7 +6289,7 @@ body {
   background-color: #981e32;
   margin-top: 0;
   margin-bottom: 0;
-  padding: 15px 5px 5px 0;
+  padding: 10px 5px 0 0;
   font-size: 14px; }
   .header-quicklinks .col-md-6 li, .header-quicklinks .col-md-6 li a {
     color: #ffffff;
@@ -6309,9 +6309,24 @@ body {
 .region.region-content {
   margin-top: 30px; }
 
+.region.region-content a {
+  text-decoration: underline; }
+
 .page-header {
   margin-left: 15px;
   margin-right: 15px; }
+
+body > div > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article {
+  padding-left: 15px;
+  padding-right: 15px; }
+
+.well {
+  margin-top: 15px;
+  border: 0;
+  box-shadow: none; }
+
+h2.block-title {
+  margin-top: 5px; }
 
 /* Bootstrap Paragraphs module output */
 .paragraph.paragraph--type--bp-columns.paragraph--view-mode--default.paragraph--width--wide.paragraph--color.paragraph--color--rgba-grey-light > div > div:nth-child(1) > div > div > div {
@@ -6328,12 +6343,12 @@ body {
   margin-top: 30px; }
 
 .footer-sitemap .col-md-3 {
-  background-color: #262b2d;
+  background-color: rgba(158, 158, 158, 0.1);
   margin-bottom: 0;
   padding: 30px 15px 15px 0;
   font-size: 14px; }
   .footer-sitemap .col-md-3 li, .footer-sitemap .col-md-3 li a {
-    color: #ffffff;
+    color: #333;
     list-style-type: none;
     padding-bottom: 8px; }
   .footer-sitemap .col-md-3 li.sitemap-section {
