--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -61,6 +61,7 @@
     <title>{{ head_title|safe_join(' | ') }}</title>
     <css-placeholder token="{{ placeholder_token|raw }}">
     <js-placeholder token="{{ placeholder_token|raw }}">
+    <link rel="shortcut icon" href="https://repo.wsu.edu/spine/1/favicon.ico" />
   </head>
   <body{{ attributes.addClass(body_classes) }}>
     <a href="#main-content" class="visually-hidden focusable skip-link">
