Added rough placeholder logo and audience links

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -81,13 +81,35 @@
     	</ul>
     </div>
     <div class="col-md-6">
-      <div>
   		<ul>
         <li><a href="https://my.wsu.edu/">myWSU</a></li>
         <li><a href="https://wsu.edu/about/statewide/">WSU Statewide</a></li>
         <li><a href="http://learn.wsu.edu/">Blackboard</a></li>
         <li><a href="https://admin.vancouver.wsu.edu/information-technology">Tech Support</a></li>
         <li><a href="http://directory.vancouver.wsu.edu">Directory</a></li>
+    </div>
+  </div>
+
+  <!-- AUDIENCE LINKS -->
+
+  <div class="header-audience">
+    <div class="col-md-12">
+      <ul>
+        <li><a href="https://www.vancouver.wsu.edu/about-wsu-vancouver">About</a></li>
+        <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions">Admissions</a></li>
+        <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Degrees</a></li>
+        <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/resources-current-students">Current Students</a></li>
+        <li><a href="https://admin.vancouver.wsu.edu/research">Research</a></li>
+        <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations">Alumni</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- LOGO ROW -->
+
+  <div class="header-logo">
+    <div class="col-md-12">
+      <img class="primary-logo" src="https://wsu.edu/wp-content/themes/wsu-home/images/wsu-home-logo.svg" alt="Washington State University">
     </div>
   </div>
 
@@ -172,7 +194,6 @@
     <div class="col-md-6">
   	  <ul>
         <li class="copyright-section"><strong>&copy; WSU Vancouver</strong></li>
-        <li><a href="https://www.vancouver.wsu.edu/about-wsu-vancouver">About</a></li>
         <li><a href="https://access.wsu.edu/">Accessibility</a></li>
         <li><a href="https://policies.wsu.edu/">Policies</a></li>
         <li><a href="http://public.wsu.edu/~forms/ProposedWAC.html">Rule making</a></li>
@@ -182,15 +203,14 @@
     <div class="col-md-6">
       <div>
   		<ul>
-        <li><a href="https://www.vancouver.wsu.edu/campus-map-directions-and-parking-information">Campus map</a></li>
         <li>14204 NE Salmon Creek Ave, Vancouver, WA, 98686</li>
         <li><a href="tel:+13605469788">360-546-9788</a></li>
+        <li><a href="https://www.vancouver.wsu.edu/campus-map-directions-and-parking-information">Map</a></li>
       </ul>
     </div>
   </div>
 
 <!-- SOCIAL MEDIA ICONS -->
-<!-- Create using glyphicons? -->
 
     <js-bottom-placeholder token="{{ placeholder_token|raw }}">
   </body>
