--- a/css/style.css
+++ b/css/style.css
@@ -6289,23 +6289,50 @@ body {
   background-color: #981e32;
   margin-top: 0;
   margin-bottom: 0;
-  padding: 10px 5px 0 0;
+  padding: 12px 0 4px 0;
   font-size: 14px; }
   .header-quicklinks .col-md-6 li, .header-quicklinks .col-md-6 li a {
     color: #ffffff;
     list-style-type: none;
-    padding: 0 8px 8px 0;
+    padding-right: 8px;
     display: inline; }
 
+/* Audience links */
+.header-audience .col-md-12 {
+  background-color: #262b2d;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 12px 0 4px 0;
+  font-size: 24px; }
+  .header-audience .col-md-12 li, .header-audience .col-md-12 li a {
+    color: #ffffff;
+    list-style-type: none;
+    padding-right: 12px;
+    display: inline; }
+  .header-audience .col-md-12 ul {
+    margin-left: -15px; }
+
+/* Header and Audience links mobile */
 @media (max-width: 768px) {
   body > div > div:nth-child(1) > ul {
-    margin-top: 15px; } }
+    margin-top: 15px; }
+  .header-audience .col-md-12 ul {
+    margin-top: 0;
+    margin-bottom: 10px; } }
+
+/* Logo */
+.header-logo .col-md-12 {
+  background-color: rgba(158, 158, 158, 0.1); }
+
+.header-logo .col-md-12 img.primary-logo {
+  margin: 30px 0 30px 15px; }
 
 /* Main content */
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   padding-left: 0;
   padding-right: 0; }
 
+/* Needed for edge to edge containers */
 .region.region-content {
   margin-top: 30px; }
 
@@ -6316,12 +6343,8 @@ body {
   margin-left: 15px;
   margin-right: 15px; }
 
-body > div > div.main-container.container-fluid.js-quickedit-main-content > div > section > div.region.region-content > article {
-  padding-left: 15px;
-  padding-right: 15px; }
-
 .well {
-  margin-top: 15px;
+  margin-top: 25px;
   border: 0;
   box-shadow: none; }
 
@@ -6329,13 +6352,13 @@ h2.block-title {
   margin-top: 5px; }
 
 /* Bootstrap Paragraphs module output */
-.paragraph.paragraph--type--bp-columns.paragraph--view-mode--default.paragraph--width--wide.paragraph--color.paragraph--color--rgba-grey-light > div > div:nth-child(1) > div > div > div {
+.paragraph.paragraph--type--bp-columns.paragraph--view-mode--default.paragraph--width--wide.paragraph--color.paragraph--color--rgba-grey-slight > div > div:nth-child(1) > div > div > div {
   padding-bottom: 40px; }
 
-.paragraph.paragraph--type--bp-columns.paragraph--view-mode--default.paragraph--width--wide.paragraph--color.paragraph--color--rgba-grey-light > div > div:nth-child(2) > div > div > div {
+.paragraph.paragraph--type--bp-columns.paragraph--view-mode--default.paragraph--width--wide.paragraph--color.paragraph--color--rgba-grey-slight > div > div:nth-child(2) > div > div > div {
   padding-bottom: 40px; }
 
-.paragraph.paragraph--type--bp-columns.paragraph--view-mode--default.paragraph--width--wide.paragraph--color.paragraph--color--rgba-grey-light > div > div:nth-child(3) > div > div > div {
+.paragraph.paragraph--type--bp-columns.paragraph--view-mode--default.paragraph--width--wide.paragraph--color.paragraph--color--rgba-grey-slight > div > div:nth-child(3) > div > div > div {
   padding-bottom: 30px; }
 
 /* Footer */
