--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -71,30 +71,28 @@
 <!-- HEADER QUICKLINKS -->
 
 <div class="header-quicklinks">
-    <div class="col-md-6">
-      <ul>
-    		<li><a href="https://outlook.office365.com/owa/wsu.edu/">Webmail</a></li>
-    		<li><a href="http://office365.wsu.edu/">Office 365</a></li>
-        <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
-        <li><a href="https://admin.vancouver.wsu.edu/academic-affairs">Academics</a></li>
-    		<li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
-    	</ul>
-    </div>
-    <div class="col-md-6">
-  		<ul>
-        <li><a href="https://my.wsu.edu/">myWSU</a></li>
-        <li><a href="https://wsu.edu/about/statewide/">WSU Statewide</a></li>
-        <li><a href="http://learn.wsu.edu/">Blackboard</a></li>
-        <li><a href="https://admin.vancouver.wsu.edu/information-technology">Tech Support</a></li>
-        <li><a href="http://directory.vancouver.wsu.edu">Directory</a></li>
-    </div>
-  </div>
 
-  <!-- AUDIENCE LINKS -->
+  <div class="col-md-12">
 
-  <div class="header-audience">
-    <div class="col-md-12">
-      <ul>
+    <div class="dropdown">
+        <a href="#" data-toggle="dropdown" class="dropdown-toggle">Quick links <b class="caret"></b></a>
+        <ul class="dropdown-menu dropdown-menu-right">
+          <li><a href="https://admin.vancouver.wsu.edu/academic-affairs">Academics</a></li>
+          <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
+          <li><a href="http://learn.wsu.edu/">Blackboard</a></li>
+          <li><a href="http://directory.vancouver.wsu.edu">Directory</a></li>
+          <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
+          <li><a href="https://my.wsu.edu/">myWSU</a></li>
+      		<li><a href="http://office365.wsu.edu/">Office 365</a></li>
+          <li><a href="https://admin.vancouver.wsu.edu/information-technology">Tech Support</a></li>
+          <li><a href="https://outlook.office365.com/owa/wsu.edu/">Webmail</a></li>
+          <li><a href="https://wsu.edu/about/statewide/">WSU Statewide</a></li>
+        </ul>
+    </div>
+
+    <div class="dropdown">
+      <a href="#" data-toggle="dropdown" class="dropdown-toggle">Audiences <b class="caret"></b></a>
+      <ul class="dropdown-menu dropdown-menu-right">
         <li><a href="https://www.vancouver.wsu.edu/about-wsu-vancouver">About</a></li>
         <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions">Admissions</a></li>
         <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Degrees</a></li>
@@ -103,13 +101,16 @@
         <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations">Alumni</a></li>
       </ul>
     </div>
+
   </div>
+
+</div>
 
   <!-- LOGO ROW -->
 
   <div class="header-logo">
     <div class="col-md-12">
-      <img class="primary-logo" src="https://wsu.edu/wp-content/themes/wsu-home/images/wsu-home-logo.svg" alt="Washington State University">
+      <img class="primary-logo" src="https://www.vancouver.wsu.edu/sites/www.vancouver.wsu.edu/themes/omegawsuv/images/wsu-vancouver-primary-logo-rgb.svg" alt="Washington State University Vancouver logo">
     </div>
   </div>
 
