--- a/scss/_default-variables.scss
+++ b/scss/_default-variables.scss
@@ -22,6 +22,10 @@ $font-size-base: 17px;
 
 $brand-primary: #981e32;
 
+// GRID
+
+$grid-gutter-width: 0;
+
 // COMPONENTS
 
 $border-radius-base: 0;
