Balance footer margins to 20px

--- a/css/style.css
+++ b/css/style.css
@@ -6349,7 +6349,7 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > sect
 .footer-sitemap .col-md-3 {
   background-color: rgba(158, 158, 158, 0.1);
   margin-bottom: 0;
-  padding: 30px 15px 15px 0;
+  padding: 30px 15px 15px 5px;
   font-size: 14px; }
   .footer-sitemap .col-md-3 li, .footer-sitemap .col-md-3 li a {
     color: #333;
@@ -6362,7 +6362,7 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > sect
 .footer-copyright .col-md-6 {
   background-color: #981e32;
   margin-bottom: 0;
-  padding: 15px 5px 5px 0;
+  padding: 15px 5px 5px 5px;
   font-size: 14px; }
   .footer-copyright .col-md-6 li, .footer-copyright .col-md-6 li a {
     color: #ffffff;
